fixed data-cell information not showing on phone sizes.

--- a/src/public/includes/css/main.css
+++ b/src/public/includes/css/main.css
@@ -396,7 +396,7 @@ td {
 	display: block;
 }
 
-td::before:not(#expand-row) {
+td::before {
 	content: attr(data-cell) ": ";
 	font-weight: 700;
 	text-transform: capitalize;
